# SequentTCP

./: .gitignore  README.md  ROADMAP.md  STORIES.md  modbusTCP.py
legacy/: modbusTCP.py
sequent-gateway/: Cargo.toml  Cross.toml  FUTURE_API.md  justfile
sequent-gateway/.cargo/: config.toml
sequent-gateway/boards/: megaind.toml  relay16.toml  relay8.toml
sequent-gateway/boards/experimental/: 16inpind_pca.toml  16inputs.toml  16univin.toml  16uout.toml  24b8vin.toml  3relind.toml  4rel4in.toml  4relay.toml  4relind_mcu.toml  4relind_pca.toml  8crt.toml  8inputs_mcu.toml  8inputs_pca.toml  8mosfet.toml  8mosind_mcu.toml  8relayhv.toml  README.md  dash.toml  fsrc.toml  ioplus.toml  lkit.toml  megabas.toml  megaio.toml  megaioind.toml  multiio.toml  plcpi.toml  rtd.toml  smartfan.toml  smtc.toml  ti.toml  wdt.toml
sequent-gateway/deploy/: sequent-gateway.env  sequent-gateway.service
sequent-gateway/src/: board_def.rs  board_registry.rs  cache.rs  channel_watchdog.rs  cli.rs  config.rs  databank.rs  health.rs  i2c_recovery.rs  main.rs  modbus.rs  registers.rs  slave_map.rs
sequent-gateway/src/configure/: app.rs  mod.rs  ui.rs
sequent-gateway/src/hal/: driver.rs  megaind.rs  mod.rs  relay16.rs  traits.rs
sequent-gateway/src/validate/: mod.rs  modbus_client.rs  results.rs  scenario.rs  tests.rs
tests/: hw-validation.py  hw_runner.py
tests/scenarios/: default_multi.toml  default_single.toml  megaind_only.toml  relay16_only.toml  relay8_only.toml
